--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,11 @@
 title: Josephine Wilson Photography 
 email: josephinehwilson@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Natural family photography in Tucson, Arizona. 
 # twitter_username: username
 github_username: josephinewilsonaz
 minimal_mistakes_skin: dark
+locale: "en"
 search: false
 
 # Build settings
@@ -86,6 +85,9 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
+
+atom_feed:
+  hide: true
 
 defaults:
   # _posts
